src/index.css
@import '../node_modules/materialize-css/dist/css/materialize.css';
@import "https://fonts.googleapis.com/icon?family=Material+Icons";

body {
  margin: 0;
  padding: 0;
  font-family: sans-serif;
  background-color: #afd3e2;
}
h3{
  font-size: 16px;
  font-weight: bold;
  letter-spacing: 3px;
  text-transform: uppercase;
  margin-bottom: 5px;
}
.title{
  text-transform: uppercase;
  font-weight: 100;
  margin-left: 50px;
  letter-spacing: 6px;
}
.boardContainer{
  max-width: 1400px;
  background-color: white;
  margin: 5px auto;
  text-align: center;
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  justify-content: space-around;
  min-height: 90vh;
}
.oceanBoard{
  display: flex;
  flex-direction: row;
  width: 408px;
  margin: 0 20px 20px 20px;
  border: 2px solid grey;
  flex-wrap: wrap;
  padding: 12px 4px 12px 12px;
  background-color: black;
  height: 0px;
  overflow: hidden;
  -webkit-transition: all 500ms ease;
  -moz-transition: all 500ms ease;
  -ms-transition: all 500ms ease;
  -o-transition: all 500ms ease;
  transition: all 500ms ease;
}

.subtitleBelow{
  font-weight: bold;
  text-transform: uppercase;
  letter-spacing: 2px;
}

.oceanSquare{
  background-color: white;
  display: inline-block;
  width: 40px;
  height: 38px;
  border: 1px solid grey;
  margin: -4px -1px;
  -webkit-transition: all 200ms ease;
  -moz-transition: all 200ms ease;
  -ms-transition: all 200ms ease;
  -o-transition: all 200ms ease;
  transition: all 200ms ease;
  cursor: pointer;
}

.buttonHolder{
  background-color: black;
  width: 408px;
  margin: -20px 20px 20px 20px;
  padding: 5px;
  height: 55px;
}

.graveyard{
  textAlign: left;
  width: 380px;
}

.pickerContainer{
  width: 300px;
  margin: 50px 0;
}
.battleLogContainer{
  width: 420px;
  height: 80vh;
  margin: 20px 10px;
  box-shadow: 3px 3px 3px 1px grey;
  overflow: scroll;
}
.battleLogRow{
  display: flex;
  flex-direction: row;
  border-bottom: 1px solid #DDDAE2;
  padding: 10px 5px;
  letter-spacing: 3px;
  font-size: 10px;
  width: 100%;
}
.logTitle{
  font-size: 18px;
  font-weight: bold;
  color: red;
}
.resultInSquareMiss{
  color: darkgrey;
  margin-top: 5px;
}
.resultInSquareHit{
  color: red;
  margin-top: 5px;
}

